# samaria

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  setup.py
bindings/: CMakeLists.txt  python_bindings.cpp
cmake/: FindGTest.cmake  FindMeCab.cmake  FindSentencePiece.cmake  FindTorch.cmake  Findpybind11.cmake  Findspdlog.cmake
examples/: simple_demo.py
examples/data/embeddings/image/: 1_emb.npy  1_image.npy
examples/data/embeddings/text/: -1007122432750159283.npy  -1016107147087885894.npy  -1132693263075399727.npy  -1158284610932319592.npy  -1412583871157961407.npy  -1586610217854621454.npy  -205458633036985795.npy  -2712872373380311613.npy  -3508689894437709478.npy  -3588693875299888439.npy  -4390289449598393999.npy  -4392693798842897196.npy  -4786031150057427620.npy  -4987304438008157867.npy  -5188817166493044827.npy  -5259616740790530076.npy  -5441076638537034838.npy  -571316133751302135.npy  -5829435887371089456.npy  -6061840259181042830.npy  -616315496610064774.npy  -6323566012156182158.npy  -6407657104061961988.npy  -6449796389510657933.npy  -6514669151574236216.npy  -7543146152229009896.npy  -7663252714587274212.npy  -8690024185953332464.npy  -8957132340519868853.npy  -8979760758060523892.npy  -9160958862436959869.npy  -941827249403766636.npy  1085055571070052907.npy  1092776190320897405.npy  1423992416461153283.npy  1636001255593200960.npy  1_text.npy  2029796290063714096.npy  2062612350201975729.npy  2397815043383165031.npy  (+32 more)
include/: attention.h  config.h  contrastive_model.h  error_codes.h  error_handling.h  image_processor.h  japanese_text_processor.h  log_config.h  logging.h  model_config.h  model_serialization.h  model_utils.h  version.h  version.h.in
python/: .gitignore  CMakeLists.txt  environment.yml  requirements.txt  setup.cfg  setup.py  setup.py.in
python/samaria_contrast/: MANIFEST.in  __init__.py  config.py  constants.py  contrast.py  exceptions.py  py.typed  utils.py  version.py  version.py.in
python/samaria_contrast/docs/: api.md
scripts/: download_models.py  export_model.py
src/: CMakeLists.txt  attention.cpp  contrastive_model.cpp  error_codes.cpp  image_processor.cpp  japanese_text_processor.cpp  logging.cpp  model_config.cpp  model_serialization.cpp  model_utils.cpp
